# openGLPlotLive

./: CMakeLists.txt
Lib/: freetype.lib  glfw3.lib
apps/: CMakeLists.txt
docs/: CMakeLists.txt
src/: CMakeLists.txt
src/axes/: AxesLineTicks.cpp
src/textures/: TextureManager.cpp
